# lash

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: cli.rs  command.rs  config.rs  lib.rs  link.rs  links.rs  main.rs  options.rs
tests/: 1_file.rs  adopt.rs  directory.rs  opts.rs  store.rs  zombies.rs
xtask/: Cargo.toml
xtask/src/: main.rs
