[package]
name = "lash"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "xtask"
]

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.0", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
dirs = "5.0.1"
log = "0.4.20"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_derive = "1.0.197"
shellexpand = { version = "3.1.0", features = ["full"] }
simplelog = { version = "0.12.1", features = ["termcolor"] }
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
rand = "0.9.1"
